<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/menu_save_headache"
        android:title="@string/menu_save"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_menu_archive"/>
    <item android:id="@+id/menu_new_headache"
        android:title="@string/menu_new"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_menu_add"/>
    <item android:id="@+id/menu_edit_pills"
        android:title="@string/menu_edit_pills"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/medicin2"/>
    <item android:id="@+id/menu_prefs"
        android:title="@string/settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        />
</menu>