<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/pill_name" />

            <Spinner
                android:id="@+id/spinner_pill_name"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/pill_number" />

            <EditText
                android:id="@+id/pill_number"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/pill_timing" />

            <Button
                android:id="@+id/pill_timing_hour"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1.5" />

            <Button
                android:id="@+id/pill_timing_day"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/pill_effect" />

            <Spinner
                android:id="@+id/pill_effect"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="4" />

        </LinearLayout>
<!-- 
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/pill_when" />

            <EditText
                android:id="@+id/pill_effect_delay"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="number" />

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/pill_when_unit" />
        </LinearLayout> -->
    </LinearLayout>

</ScrollView>